# WezaFlow

./: .gitignore  LocalFlow  A Complete Local Wispr Flow Clone — Implementation Plan for AI Coding Agents.md  Localflow-quality-roadmap.md  README.md  how-wispr-flow-works.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tasks.ps1  vite.config.ts
config/: app_profiles.yaml  settings.yaml  snippets.yaml
db/: schema.sql
docs/: asr-model-thread-test-report.md  localflow-quality-roadmap.md  macos-test-build.md
scripts/: benchmark_asr.cmd  benchmark_asr.ps1  init_db.py  install_startup_task.ps1  record_benchmark_pack.cmd  record_benchmark_pack.ps1  record_test.ps1  run_dictation.cmd  run_dictation.ps1  setup.ps1  setup_macos.sh  start_services.ps1  start_services_macos.sh  test_pipeline.ps1  vocabulary.py
services/: __init__.py  pipeline_server.py
services/asr/: vad.py  (+6 more)
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: test_asr.py  test_asr_benchmark.py  test_asr_profiles.py  test_context_injection.py  test_correction_watcher.py  test_desktop_shell.py  test_llm_data.py  test_pipeline.py  test_pipeline_factory.py  test_pipeline_server.py  test_runtime_api.py  test_runtime_audio.py  test_runtime_hotkeys.py  test_runtime_logging.py  test_runtime_runner.py  test_runtime_session.py  test_runtime_speculative.py  test_scaffold.py  test_vocabulary_scripts.py  test_vocabulary_store.py
(+47 files in other folders)
